Add dev session for debugging
